--- a/arch/arm64/configs/cyanogenmod_a5xelte_defconfig
+++ b/arch/arm64/configs/cyanogenmod_a5xelte_defconfig
@@ -398,8 +398,8 @@ CONFIG_SECCOMP=y
 # Boot options
 #
 CONFIG_CMDLINE="console=ttySAC1 androidboot.hardware=samsungexynos7580 androidboot.selinux=permissive"
-CONFIG_CMDLINE_FROM_BOOTLOADER=y
-# CONFIG_CMDLINE_EXTEND is not set
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 
